[gd_scene load_steps=18 format=3 uid="uid://046sex0ys1pd"]

[ext_resource type="Script" path="res://Scripts/Objects/Rings/ring.gd" id="1_x53fj"]
[ext_resource type="Texture2D" uid="uid://cqjfiw2hdn60k" path="res://Graphics/Objects/Rings/ring.png" id="1_y5jpy"]
[ext_resource type="Texture2D" uid="uid://m283sfjo2im8" path="res://Graphics/Particles/ring_sparkle.png" id="3_4hegt"]
[ext_resource type="Script" path="res://Scripts/Particles/particle.gd" id="4_r8013"]

[sub_resource type="AtlasTexture" id="AtlasTexture_82bkd"]
atlas = ExtResource("1_y5jpy")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ia2w"]
atlas = ExtResource("1_y5jpy")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxrpi"]
atlas = ExtResource("1_y5jpy")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0e8y"]
atlas = ExtResource("1_y5jpy")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhu8g"]
atlas = ExtResource("1_y5jpy")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_se5ng"]
atlas = ExtResource("1_y5jpy")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4ak0"]
atlas = ExtResource("1_y5jpy")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxerl"]
atlas = ExtResource("1_y5jpy")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1eiw1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_82bkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ia2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxrpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0e8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhu8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se5ng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4ak0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxerl")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6twtc"]
size = Vector2(16, 16)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_f1h24"]
blend_mode = 1

[sub_resource type="Animation" id="Animation_tbci0"]
resource_name = "default"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_00h1q"]
_data = {
"default": SubResource("Animation_tbci0")
}

[node name="Ring" type="Node2D"]
script = ExtResource("1_x53fj")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1eiw1")
autoplay = "default"
frame_progress = 0.104412

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_6twtc")

[node name="RingSparkle" type="Sprite2D" parent="."]
visible = false
z_index = 1
material = SubResource("CanvasItemMaterial_f1h24")
texture = ExtResource("3_4hegt")
hframes = 4
frame = 3
script = ExtResource("4_r8013")

[node name="AnimationPlayer" type="AnimationPlayer" parent="RingSparkle"]
libraries = {
"": SubResource("AnimationLibrary_00h1q")
}

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="RingSparkle/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
